--- a/src/Gemfile
+++ b/src/Gemfile
@@ -64,3 +64,4 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem "jquery-rails"
 gem "bootstrap-sass", "3.4.1"
 gem "rails-controller-testing"
+gem "faker"
