resume from ch.5

--- a/src/Gemfile
+++ b/src/Gemfile
@@ -63,5 +63,9 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 gem "jquery-rails"
 gem "bootstrap-sass", "3.4.1"
+gem "kaminari"
+gem "kaminari-bootstrap"
 gem "rails-controller-testing"
 gem "faker"
+gem "carrierwave"
+gem "mini_magick"
