--- a/src/Gemfile
+++ b/src/Gemfile
@@ -8,7 +8,7 @@ gem 'rails', '~> 5.2.2'
 # Use mysql as the database for Active Record
 gem 'mysql2', '>= 0.4.4', '< 0.6.0'
 # Use Puma as the app server
-gem 'puma'
+gem "puma", ">= 3.12.6"
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
@@ -60,6 +60,12 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+# Alerts
+gem "rack", ">= 2.1.4"
+gem "rubyzip", ">= 1.3.0"
+gem "nokogiri", ">= 1.10.8"
+gem "activesupport", ">= 5.2.4.3"
 
 gem "jquery-rails"
 gem "bootstrap-sass", "3.4.1"
